--- a/CogNAP_paper.Rmd
+++ b/CogNAP_paper.Rmd
@@ -9,15 +9,18 @@ author:
     address       : "Department of Linguistics---Phonetics, University of Cologne, Herbert-Lewin-Straße 6, 50931 Cologne, Germany"
     email         : "a.albert@uni-koeln.de"
   - name          : "Bruno Nicenboim"
-    affiliation   : "2"
+    affiliation   : "2,3"
 
 affiliation:
   - id            : "1"
     institution   : "Department of Linguistics---Phonetics, University of Cologne"
   - id            : "2"
+    institution   : "Department of Cognitive Science and Artificial Intelligence, Tilburg University"
+  - id            : "3"
     institution   : "Department of Linguistics, University of Potsdam"
 
 authornote: |
+  Author Note: In accordance with the Peer Reviewers' Openness Initiative (opennessinitiative.org), all materials and scripts associated with this manuscript were available during the review process and remain available on OSF project “NAP model” at https://osf.io/y477r/.
 
 abstract: |
   *Sonority* is a fundamental notion in phonetics and phonology, central to many descriptions of the syllable and evidently useful as a predictor of phonotactics (i.e., the propensity of different consonants and vowels to combine via concatenation).
@@ -37,7 +40,8 @@ wordcount         : "X"
 
 bibliography      : ["bibs/r-references.bib", "bibs/methods.bib", "bibs/phon.bib", "bibs/phon_sk.bib"]
 appendix:
-  - "./appendix.Rmd"
+  - "./appendix_a.Rmd"
+  - "./appendix_b.Rmd"
 floatsintext      : no
 figurelist        : no
 tablelist         : no
@@ -99,9 +103,9 @@ We use a Bayesian data analysis approach to test and compare the six different s
 
 Our synergy of proposals has many advantages over traditional sonority accounts, including methodological aspects, theoretical perspectives, and, most importantly, a better empirical coverage. In Subsection \@ref(sec:discussion2) we interpret the results of the main confirmatory experiment and in Section \@ref(sec:genDiscussion) we address some relevant implications, 
 where we discuss the usefulness of the top-down vs. bottom-up distinction instead of the common use of the phonology--phonetics dichotomy to express the distinction between discrete and continuous aspects of linguistic sound systems (Subsection \@ref(sec:dichotomies)).
-We also discuss the division of labor between sonority and other phonotactic factors, demonstrated with a holistic account of the phenomenon of /s/-stop clusters (Subsection \@ref(sec:division)).
+We also discuss the division of labor between sonority and other phonotactic factors, demonstrated with a holistic account of the phenomenon of /s/-stop clusters (Subsection \@ref(sec:division)), before we present our concluisons in Section \@ref(sec:conclusions). 
+<!-- and we provide the technical details on the procedures used in the experiments in Section \@ref(sec:methods). -->
 
-We present our concluisons in Section \@ref(sec:conclusions) and we provide the technical details on the procedures used in the experiments in Section \@ref(sec:methods).
 In the remainder of this Introduction, we briefly present the relevant background on traditional sonority hierarchies and sonority principles, emphasizing their rationale, their application, and their inherent flaws (Subsections \@ref(sec:hierarchies)-\@ref(sec:failures)). 
 
 ## Sonority hierarchies {#sec:hierarchies}
@@ -750,7 +754,11 @@ Any increase in the above results in a larger distance between the two centers o
 In what follows we present two experiments: (i) an exploratory study with 12 subjects and no repetitions and; (ii) a confirmatory study with 51 subjects and four repetitions
 <!-- [^cf-expconf]  -->
 [see @nicenboim2018exploratorysk on dividing up experimental endeavors into exploratory and confirmatory studies].
-Note that all the media and original code that was used in this study are available at the following link on *Open Science Framework* (anonymized link): https://tinyurl.com/y4gvobyp 
+In both cases, informed consent from the participants was obtained before each experimental session. The experiment complied with the June 1964 Declaration of Helsinki (carried out by the World Medical Association and entitled “Ethical Principles for Medical Research Involving Human Subjects”), as last revised.[^cf-helsinki] 
+
+[^cf-helsinki]: In accordance with German NSF (DFG) guidelines, for experiments with unimpaired adult populations, the ethics approval is required by the Principal Investigator (in this case, Prof. Dr. Martine Grice).
+<!-- Note that all the media and original code that was used in this study are available at the following link on *Open Science Framework*: https://tinyurl.com/y3l4avap. -->
+<!-- (anonymized link): https://tinyurl.com/y4gvobyp  -->
 
 ##		Rationale {#sec:rationale}
 
@@ -766,7 +774,7 @@ Note that since the bottom-up predictions of NAP are derived via measurements of
 ##		Materials {#sec:materials}
 
 The experimental design is focused on onset consonantal clusters with two members. These CC combinations are composed from a set of consonants with *coronal* and *labial* places of articulation to avoid articulatory effects that may arise from *homorganic* sequences (i.e., adjacent consonants that share the same place of articulation) by exploiting both directions of each combination---coronal-labial (back-to-front) and labial-coronal (front-to-back). The consonantal classes in this experiment include *stops*, *fricatives*, *nasals*, and *liquids* to reflect the main classes in traditional sonority hierarchies, with the exclusion of *glides*.[^cf-glides2] 
-See Subsection \@ref(sec:considerationlist) for a list of considerations and criteria that we used in constructing the experimental stimulus set, and see the full stimulus set in Table \@ref(tab:targetlist).
+See Appendix \@ref(appendix:a) for a list of considerations and criteria that we used in constructing the experimental stimulus set, and see the full stimulus set in Table \@ref(tab:targetlist).
 
 [^cf-glides2]: Although glides (namely /j/ and /w/) were originally included in the exploratory study, we eventually excluded glides from the analysis of the exploratory study, and we completely excluded glides from the ensuing confirmatory study. The main reason being that glides have a complex status, which is not only structurally-determined (a glide in the nucleus is considered a vowel), but it is also theory-dependent: a glide immediately adjacent to a nuclear vowel may be analyzed as a vowel (i.e., syllabified within the nucleus as part of a diphthong) or as a consonant (i.e., syllabified in the onset or coda positions), depending on language and analysis.
 
@@ -1209,7 +1217,10 @@ For model comparison, we examine the out-of-sample predictive accuracy of the di
 
 ## Experiment 1: Exploratory study {#sec:experiment1}
 
-Given the various novelties in our proposal, the methodologies for data collection, data extraction, and model implementation were first tested on a small body of real data that we collected before finalizing our methodologies (namely model implementations in Subsection \@ref(sec:modelimp) and the various procedural details in Section \@ref(sec:methods). We used this exploratory study to test our methodologies and to explore the possibilities for properly estimating nucleus competition in each of the NAP models. 
+Given the various novelties in our proposal, the methodologies for data collection, data extraction, and model implementation were first tested on a small body of real data that we collected before finalizing our methodologies (namely model implementations in Subsection \@ref(sec:modelimp) and the various procedural details in 
+Appendix \@ref(appendix:a).
+<!-- Section \@ref(sec:methods).  -->
+We used this exploratory study to test our methodologies and to explore the possibilities for properly estimating nucleus competition in each of the NAP models. 
 
 The exploratory study was administered in two versions, each with half of the fillers and all of the targets in one block, yielding a total of 58 data points per subject (29 fillers + 29 targets, no repetitions).[^cf-pilot] The two different versions were evenly split between participants (each version was presented to six participants).
 
@@ -1318,7 +1329,7 @@ spal_nap <- scores %>% filter(stimulus == "spal") %>%
 
 ```
 
-Notice that the posterior of the effect of well-formedness, $\hat\beta$, is not comparable across models. For the ordinal models, it represents the distance between two adjacent categories had they been equidistant, or in other words, $\hat\beta$ multiplied by the number of categories minus one represents the increase in log-scale between the first and the last category. This means that it is highly affected by the number of categories. For the continuous bottom-up model, $NAP_{bu}$, $\beta$ represents, the increase in log-scale for one unit in the well-formedness scale. To make it concrete, between, /lpal/ and /lkal/ there are `r lkal_nap -lpal_nap` units (`r lkal_nap` and `r lpal_nap` respectively); and between /lkal/ and /spal/ there are `r spal_nap  -lkal_nap` units (since their NAP scores are `r spal_nap` and `r lkal_nap` respectively). However, for all the models, $\hat\beta$ is negative, indicating that well-formedness is associated with faster responses. See the Appendix for the complete output of the models.
+Notice that the posterior of the effect of well-formedness, $\hat\beta$, is not comparable across models. For the ordinal models, it represents the distance between two adjacent categories had they been equidistant, or in other words, $\hat\beta$ multiplied by the number of categories minus one represents the increase in log-scale between the first and the last category. This means that it is highly affected by the number of categories. For the continuous bottom-up model, $NAP_{bu}$, $\beta$ represents, the increase in log-scale for one unit in the well-formedness scale. To make it concrete, between, /lpal/ and /lkal/ there are `r lkal_nap -lpal_nap` units (`r lkal_nap` and `r lpal_nap` respectively); and between /lkal/ and /spal/ there are `r spal_nap  -lkal_nap` units (since their NAP scores are `r spal_nap` and `r lkal_nap` respectively). However, for all the models, $\hat\beta$ is negative, indicating that well-formedness is associated with faster responses. See Appendix \@ref(appendix:b) for the complete output of the models.
 
 ### Discussion of exploratory study {#sec:discussion1}
 
@@ -1367,7 +1378,7 @@ For all the models, the well-formedness score shows a clear effect on response t
 * For *NAP~td~*: `r est_NAP_td`.
 * For *NAP~bu~*: `r est_NAP_bu`.
 
-See section \@ref(sec:results1) for the interpretation of $\hat\beta$, and the Appendix for the complete output of the models. 
+See section \@ref(sec:results1) for the interpretation of $\hat\beta$, and Appendix \@ref(appendix:b) for the complete output of the models. 
 
 ####  Descriptive adequacy {#sec:posterior2}
 
@@ -1824,58 +1835,63 @@ Lastly, this study also provides compelling motivations and strong evidence that
 (ii) automatic syllabification procedures based on the smoothed fluctuation rates of the periodic energy curve [useful for a myriad of tasks, including speech rhythmicity studies; see, e.g., @galves2002sonoritysk; @tilsen2013speech; @rasanen2018pre; @lin2020hit], and;
 (iii) improved visualization and analysis of pitch contours in intonation research based on the interaction of the periodic energy and the F0 trajectories [see @albert2018using; @cangemi2019modellingsk; and @albert2020propersk for continuous visualization and quantification procedures in intonational phonology using periodic energy].
 
-# Methods {#sec:methods}
+<!-- # Methods {#sec:methods} -->
 
-## Stimulus list considerations {#sec:considerationlist}
+<!-- ## Stimulus list considerations {#sec:considerationlist} -->
 
-The following list summarizes concerns that were taken into consideration when constructing the stimulus set (see the full set in Table \@ref(tab:targetlist)):
+<!-- The following list summarizes concerns that were taken into consideration when constructing the stimulus set (see the full set in Table \@ref(tab:targetlist)): -->
 
-*	For the class of liquids we consider only the lateral /l/, disregarding the sub-class of rhotics that are phonetically varied and inconsistent across different languages. We therefore present no liquid plateau in the experimental set.
+<!-- *	For the class of liquids we consider only the lateral /l/, disregarding the sub-class of rhotics that are phonetically varied and inconsistent across different languages. We therefore present no liquid plateau in the experimental set. -->
 
-*	We use the alveolar /s/ for the class of voiceless sibilants (voiceless coronal fricatives). In *C*~1~ positions we also use the post-alveolar /ʃ/ to monitor language-specific effects that may appear due to restrictions in German, in which /ʃC/ onset clusters can be licit, while /sC/ onset clusters occur only marginally in loanwords.
-<!-- should not be allowed. -->
+<!-- *	We use the alveolar /s/ for the class of voiceless sibilants (voiceless coronal fricatives). In *C*~1~ positions we also use the post-alveolar /ʃ/ to monitor language-specific effects that may appear due to restrictions in German, in which /ʃC/ onset clusters can be licit, while /sC/ onset clusters occur only marginally in loanwords. -->
+<!-- <!-- should not be allowed. --> 
 
-*	We use stops only in *C*~2~ position. We avoid stops in *C*~1~ position since it is also the phrase-initial position of the stimuli, which is practically devoid of acoustic cues for the closure phase of the stop. Furthermore, we use only voiceless stops in order to keep the amount of stimuli reasonably low.
+<!-- *	We use stops only in *C*~2~ position. We avoid stops in *C*~1~ position since it is also the phrase-initial position of the stimuli, which is practically devoid of acoustic cues for the closure phase of the stop. Furthermore, we use only voiceless stops in order to keep the amount of stimuli reasonably low. -->
 
-* We use one instance of the dorsal consonant /k/ instead of the coronal /t/ as an alternative to a labial-coronal cluster with a liquid in *C*~1~, thus retaining the same direction of a labial-coronal cluster (i.e., both labial-coronal and coronal-dorsal are front-to-back in terms of their places of articulation). We do not use other dorsals for fricative, nasal or liquid consonants, as these tend to be relatively more marked and more inconsistent between languages.
+<!-- * We use one instance of the dorsal consonant /k/ instead of the coronal /t/ as an alternative to a labial-coronal cluster with a liquid in *C*~1~, thus retaining the same direction of a labial-coronal cluster (i.e., both labial-coronal and coronal-dorsal are front-to-back in terms of their places of articulation). We do not use other dorsals for fricative, nasal or liquid consonants, as these tend to be relatively more marked and more inconsistent between languages. -->
 
-*	Lastly, we avoid sequences of obstruents that differ in voicing due to the cross-linguistic tendency of obstruent clusters to agree in voicing [see, e.g., @cho1990typology], although note that German allows /ʃv/ and /t͡sv/ clusters while banning /ʃf/.
+<!-- *	Lastly, we avoid sequences of obstruents that differ in voicing due to the cross-linguistic tendency of obstruent clusters to agree in voicing [see, e.g., @cho1990typology], although note that German allows /ʃv/ and /t͡sv/ clusters while banning /ʃf/. -->
 
-## Audio recordings {#sec:audio}
+<!-- ## Audio recordings {#sec:audio} -->
 
-Audio stimuli for the experiment were recorded by a phonetically trained native Hebrew speaker (the first author) in a sound attenuated booth at the phonetics laboratory of the University of Cologne. Speech was recorded via head-mounted headset condenser microphone (AKG C420), capturing mono digital files at a resolution of 44.1kHz sample-rate and 24 bit depth with a Metric Halo MIO 2882 audio interface. Selected audio takes were treated in the original high resolution for DC offset correction and compression of ultra low frequencies under 52Hz (to compensate for some room reverberation effects). Audio was then downgraded from 24 to 16 bit depth with Goodhertz Good Dither dithering to be used in the perception task running on OpenSesame 3.1.9 [@mathot2012opensesame]. The audio that was submitted to analyses by the APP Detector (see Subsection \@ref(sec:obtaining)) was also downgraded in sample-rate to 16kHz. Finally all audio takes, at all resolutions, were normalized to the same RMS target of -20dBFS.
+<!-- Audio stimuli for the experiment were recorded by a phonetically trained native Hebrew speaker (the first author) in a sound attenuated booth at the phonetics laboratory of the University of Cologne. Speech was recorded via head-mounted headset condenser microphone (AKG C420), capturing mono digital files at a resolution of 44.1kHz sample-rate and 24 bit depth with a Metric Halo MIO 2882 audio interface. Selected audio takes were treated in the original high resolution for DC offset correction and compression of ultra low frequencies under 52Hz (to compensate for some room reverberation effects). Audio was then downgraded from 24 to 16 bit depth with Goodhertz Good Dither dithering to be used in the perception task running on OpenSesame 3.1.9 [@mathot2012opensesame]. The audio that was submitted to analyses by the APP Detector (see Subsection \@ref(sec:obtaining)) was also downgraded in sample-rate to 16kHz. Finally all audio takes, at all resolutions, were normalized to the same RMS target of -20dBFS. -->
 
-\begin{exe}
-\ex \textbf{/ze maʁˈgiʃ \emph{CCal} kaˈʁe.ga/} (ʼit feels (like) \emph{CCal} at the momentʼ) \label{ex:sentence}
-\end{exe}
+<!-- \begin{exe} -->
+<!-- \ex \textbf{/ze maʁˈgiʃ \emph{CCal} kaˈʁe.ga/} (ʼit feels (like) \emph{CCal} at the momentʼ) \label{ex:sentence} -->
+<!-- \end{exe} -->
 
-To record the stimuli, the combined 87 word-like tokens were embedded within carrier sentences, appearing in a non-final position with
-default declarative intonation
-in order to maintain consistent prosody. Carrier sentences were also designed to minimize potential effects of resyllabification as well as co-articulation by controlling the segmental makeup immediately preceding and following target words, see example in (\@ref(ex:sentence))
-(the original sentence elicitation lists are available at the OSF repository in mixed Hebrew and phonemic transcripts in the form of slide presentations, see link in the opening of Section \@ref(sec:experiments)).
+<!-- To record the stimuli, the combined 87 word-like tokens were embedded within carrier sentences, appearing in a non-final position with -->
+<!-- default declarative intonation -->
+<!-- in order to maintain consistent prosody. Carrier sentences were also designed to minimize potential effects of resyllabification as well as co-articulation by controlling the segmental makeup immediately preceding and following target words, see example in (\@ref(ex:sentence)) -->
+<!-- (the original sentence elicitation lists are available at the OSF repository in mixed Hebrew and phonemic transcripts in the form of slide presentations, see link in the opening of Section \@ref(sec:experiments)). -->
 
-## Obtaining periodic energy data {#sec:obtaining}
+<!-- ## Obtaining periodic energy data {#sec:obtaining} -->
 
-We extract continuous measurements of periodic energy from acoustic signals using the *APP Detector*, a computer code that was introduced in @deshmukh2003detectionsk and developed in subsequent publications [@deshmukh2005use; @vishnubhotla2007detection], with the ability to measure the spectral distribution of periodic energy from digital audio files with a 16kHz sample-rate, effectively measuring periodic energy up to 8kHz [consider that our pitch perception range is limited to periods up to approximately 4kHz, reflecting a ceiling effect of the phase-locking of neural firing rates; @wever1937perception; @attneave1971pitch; @pressnitzer2001lower; @moore2013anintro 46]. We export the periodic energy data from the APP Detector's analysis into R [@R-base], for further data manipulation, visualization, modelling, and statistics.
+<!-- We extract continuous measurements of periodic energy from acoustic signals using the *APP Detector*, a computer code that was introduced in @deshmukh2003detectionsk and developed in subsequent publications [@deshmukh2005use; @vishnubhotla2007detection], with the ability to measure the spectral distribution of periodic energy from digital audio files with a 16kHz sample-rate, effectively measuring periodic energy up to 8kHz [consider that our pitch perception range is limited to periods up to approximately 4kHz, reflecting a ceiling effect of the phase-locking of neural firing rates; @wever1937perception; @attneave1971pitch; @pressnitzer2001lower; @moore2013anintro 46]. We export the periodic energy data from the APP Detector's analysis into R [@R-base], for further data manipulation, visualization, modelling, and statistics. -->
 
-We sum over the different frequencies that the APP Detector measures to obtain a time series  with the sum of periodic energy over different frequencies at 10 ms intervals.
-We fit a smoothed curve to the periodic energy time series, to eliminate small-scale fluctuations in the curve's trajectory, and, finally, the sum of periodic energy is log transformed, where it is divided by a value that reflects the threshold of effective voicing periodicity, thus setting a meaningful zero for the periodic energy floor (we apply Tukey's Running Median Smoothing "3RS3R" to the periodic energy data. The threshold of the log transform is calculated as the maximal value obtained for voiceless portions in the set).
-<!-- [^cf-smog] -->
+<!-- We sum over the different frequencies that the APP Detector measures to obtain a time series  with the sum of periodic energy over different frequencies at 10 ms intervals. -->
+<!-- We fit a smoothed curve to the periodic energy time series, to eliminate small-scale fluctuations in the curve's trajectory, and, finally, the sum of periodic energy is log transformed, where it is divided by a value that reflects the threshold of effective voicing periodicity, thus setting a meaningful zero for the periodic energy floor (we apply Tukey's Running Median Smoothing "3RS3R" to the periodic energy data. The threshold of the log transform is calculated as the maximal value obtained for voiceless portions in the set). -->
+<!-- <!-- [^cf-smog] --> 
 
-The periodic energy curve is fitted with Local Polynomial Regression Fitting (*loess*) in the figures. This is only used for visual clarity---all the data points and calculations are based on the periodic energy curve before this smoothing and after initial smoothing and log transform (as detailed above).
+<!-- The periodic energy curve is fitted with Local Polynomial Regression Fitting (*loess*) in the figures. This is only used for visual clarity---all the data points and calculations are based on the periodic energy curve before this smoothing and after initial smoothing and log transform (as detailed above). -->
 
-## Perception task details {#sec:ptask}
+<!-- ## Perception task details {#sec:ptask} -->
 
-Recall that the experiments were designed as a forced-choice 2-alternative perception task, where we collected accuracy and response time information.
-We determined the zero time for valid response times at the the mid point of transition from *C*~2~ to /a/, individually for each one of the 87 stimuli (given that all stimuli share the rime *al*, which is fully predictable in the context of the experiment, in contrast to the preceding material, which is unpredictable). We used manual segmentation to determine this point for each target. We then excluded response times shorter than 100ms (i.e., 100ms after the mid point of transition from *C*~2~ to /a/) as too fast to be considered as valid. This led to no exclusions from Experiment 1 and to only one observation being excluded from Experiment 2.
+<!-- Recall that the experiments were designed as a forced-choice 2-alternative perception task, where we collected accuracy and response time information. -->
+<!-- We determined the zero time for valid response times at the the mid point of transition from *C*~2~ to /a/, individually for each one of the 87 stimuli (given that all stimuli share the rime *al*, which is fully predictable in the context of the experiment, in contrast to the preceding material, which is unpredictable). We used manual segmentation to determine this point for each target. We then excluded response times shorter than 100ms (i.e., 100ms after the mid point of transition from *C*~2~ to /a/) as too fast to be considered as valid. This led to no exclusions from Experiment 1 and to only one observation being excluded from Experiment 2. -->
 
-Participants were seated in a quiet room in front of a laptop computer (a MacBook Air 13-inch, Early 2014) running the experiment on OpenSesame 3.1.9 [@mathot2012opensesame], where they listened to the stimuli through a set of closed headphones (Sennhieser HD 201), fed directly from the laptop's internal audio interface. After verifying that participants share a standard understanding of the notion of the syllable with a few German examples of words with one and two syllables (*See*, *Spaß*, *Quark*, and *Angst* vs. *Schu-le*, *Kin-der*, *Bre-zel*, *Pflau-men*), they were instructed to listen to nonce words in an "unknown" foreign language (the use of a speaker with a Hebrew accent in the stimuli that were presented to German listeners was intended to further support a "foreign" type of perception). Participants were instructed to respond quickly and accurately on whether they hear one or two syllables by clicking '1' or '2' on the computer keyboard (participants used their left index finger to choose '1' and their right index finger to choose '2').<!-- [^cf-indexfinger]  -->
-A training session of ten trials preceded the experimental trials, allowing the participants to familiarize with the task, and allowing the experimenter to adjust listening volume and monitor potential problems and misunderstandings regarding the task.
+<!-- Participants were seated in a quiet room in front of a laptop computer (a MacBook Air 13-inch, Early 2014) running the experiment on OpenSesame 3.1.9 [@mathot2012opensesame], where they listened to the stimuli through a set of closed headphones (Sennhieser HD 201), fed directly from the laptop's internal audio interface. After verifying that participants share a standard understanding of the notion of the syllable with a few German examples of words with one and two syllables (*See*, *Spaß*, *Quark*, and *Angst* vs. *Schu-le*, *Kin-der*, *Bre-zel*, *Pflau-men*), they were instructed to listen to nonce words in an "unknown" foreign language (the use of a speaker with a Hebrew accent in the stimuli that were presented to German listeners was intended to further support a "foreign" type of perception). Participants were instructed to respond quickly and accurately on whether they hear one or two syllables by clicking '1' or '2' on the computer keyboard (participants used their left index finger to choose '1' and their right index finger to choose '2').<!-- [^cf-indexfinger]  --> 
+<!-- A training session of ten trials preceded the experimental trials, allowing the participants to familiarize with the task, and allowing the experimenter to adjust listening volume and monitor potential problems and misunderstandings regarding the task. -->
 
----
 
-**Complete data and original code** are available at the following link on *Open Science Framework* (anonymized link): https://tinyurl.com/y4gvobyp 
+# CRediT authorship contribution statement {-}
+**Aviad Albert**: Conceptualization, Methodology, Investigation, Data Curation, Writing - Original Draft, Writing - Review & Editing, Visualization, Supervision. **Bruno Nicenboim**: Conceptualization, Methodology, Formal Analysis, Writing - Review & Editing, Visualization. 
 
+# Acknowledgements {-}
+This work was supported by the DAAD (German Academic Exchange Service), SFB 1252 "Prominence in Language", a.r.t.e.s. Graduate School for the Humanities Cologne and the University of Cologne.
+
+<!-- All materials associated with the current article are available on *Open Science Framework* (OSF) at https://tinyurl.com/y3l4avap.  -->
+<!-- https://tinyurl.com/y4gvobyp. -->
 
 <!-- footnotes -->
 
@@ -1951,13 +1967,10 @@ r_refs(file = "bibs/r-references.bib")
 <div id = "refs"></div>
 \endgroup
 
-
 ```{r echo = FALSE, results = 'asis', cache = FALSE}
-papaja::render_appendix('./appendix.Rmd')
+papaja::render_appendix('./appendix_a.Rmd') 
 ```
 
-
 ```{r echo = FALSE, results = 'asis', cache = FALSE}
-papaja::render_appendix('./appendix.Rmd')
+papaja::render_appendix('./appendix_b.Rmd')
 ```
-
