--- a/load.tex
+++ b/load.tex
@@ -10,3 +10,6 @@
 \setmonofont[Scale=MatchLowercase]{Andale Mono}
 \makeatletter
 \xpatchcmd{\@todo}{\setkeys{todonotes}{#1}}{\setkeys{todonotes}{inline,#1}}{}{}
+% \pagenumbering{gobble}
+\thispagestyle{empty}
+% \usepackage{hyperref}
